# especislista_deliberado

./: Dockerfile  README.md  pyproject.toml  report.md
src/especialista_deliberado/: crew.py  main.py  main_streamlit.py
src/especialista_deliberado/config/: agents.yaml  agents_coach.yaml  tasks.yaml  tasks_coach.yaml
src/especialista_deliberado/pages/: about.py
