[project]
name = "especialista_deliberado"
version = "0.1.0"
description = "especialista_deliberado using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0",
    "streamlit>=1.43.2",
]

[project.scripts]
especialista_deliberado = "especialista_deliberado.main:run"
run_crew = "especialista_deliberado.main:run"
train = "especialista_deliberado.main:train"
replay = "especialista_deliberado.main:replay"
test = "especialista_deliberado.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
